syntax="proto3";

package socialnetwork;
option go_package = "internal/services/grpc;socialnetwork_pb";

import "internal/services/proto/db_models.proto";

service UserService{
    // Get a user
    rpc GetUser(GetUserRequest) returns (GetUserResponse){}

    // Edit user's account
    rpc EditUser(EditUserRequest) returns (EditUserResponse){}
}

message GetUserRequest {
    string username = 1;
}

message GetUserResponse {
    User user = 1;
}

message EditUserRequest {
    User user = 1;
}

message EditUserResponse {
}
